[gd_scene load_steps=5 format=3 uid="uid://bdddl6vmb4qnc"]

[ext_resource type="Texture2D" uid="uid://easyj3b2vwye" path="res://Resources/Player/wallet.png" id="1_i5ki3"]
[ext_resource type="Script" path="res://gui.gd" id="1_xc68u"]

[sub_resource type="Animation" id="Animation_fafup"]
resource_name = "Wallet_Shake"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(352, 192), Vector2(356, 192), Vector2(352, 192), Vector2(348, 192)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qrbdb"]
_data = {
"Wallet_Shake": SubResource("Animation_fafup")
}

[node name="GUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -768.0
offset_bottom = -448.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xc68u")

[node name="Wallet" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -4.0
offset_bottom = 28.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("1_i5ki3")

[node name="WalletTimer" type="Timer" parent="Wallet"]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Wallet"]
libraries = {
"": SubResource("AnimationLibrary_qrbdb")
}

[node name="Location" type="Label" parent="."]
layout_mode = 0
offset_top = -25.0
offset_right = 42.0
offset_bottom = -2.0
text = "NULL"

[node name="LocationTimer" type="Timer" parent="Location"]
wait_time = 2.0
one_shot = true
autostart = true

[node name="HealthBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -27.0
offset_right = 124.0
grow_vertical = 0
value = 20.0
show_percentage = false

[connection signal="picked_up_coin" from="." to="." method="_on_picked_up_coin"]
[connection signal="shake_wallet" from="." to="." method="_on_shake_wallet"]
[connection signal="update_location" from="." to="." method="_on_update_location"]
